--- a/Decimation Glade/Assembly-CSharp.csproj
+++ b/Decimation Glade/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Assets\Scripts\MusicManager.cs" />
     <Compile Include="Assets\Scripts\LookAtCamera.cs" />
     <Compile Include="Assets\Scripts\Orb\OrbController.cs" />
+    <Compile Include="Assets\Scripts\IntroManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
